# Projet_NLP_DSM_2026_ISSEA

./: .gitignore  README.md  pyproject.toml
audit_snd30/: __init__.py  config.py
audit_snd30/analysis/: __init__.py  alignement.py  embeddings_explorer.py  glissement.py
audit_snd30/dashboard/: __init__.py  app.py
audit_snd30/extraction/: __init__.py  articles.py  lf_2024.py  lf_2025.py
audit_snd30/nlp/: __init__.py  classification.py  embeddings.py
data/processed/: articles_2023_2024.xlsx  articles_2024_2025.xlsx  lignes_budgetaires_2024.csv  lignes_budgetaires_2024.xlsx  lignes_budgetaires_2024_2025.csv  lignes_budgetaires_2024_2025.xlsx
data/raw/: README.md
notebook/: audit_snd30_complet.ipynb
scripts/: explore_embeddings.py  install_spacy_fr.py  run_dashboard.py  run_pipeline.py
src/analysis/: alignement.py  glissement.py
src/dashboard/: app.py
src/extraction/: __init__.py  base.py  lf_2024.py  lf_2025.py
src/nlp/: classification.py
tests/: test_analysis.py
