[tool.poetry]
name = "src"
version = "1.0.0"
description = "Audit sémantique et classification budgétaire des Lois de Finances camerounaises via CamemBERT — alignement SND30"
authors = ["ISSEA ISE3-DS <mbialaura12@gmail.com>"]
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "audit_snd30" }]


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "<3"
numpy = ">=2.4.2,<3.0.0"
matplotlib = ">=3.10.8,<4.0.0"
requests = ">=2.32.5,<3.0.0"
transformers = ">=5.1.0,<6.0.0"
tqdm = ">=4.67.3,<5.0.0"
sentence-transformers = ">=5.2.2,<6.0.0"
seaborn = ">=0.13.2,<0.14.0"
plotly = ">=6.5.2,<7.0.0"
hdbscan = ">=0.8.41,<0.9.0"
numba = ">=0.58"
llvmlite = ">=0.41"
umap-learn = ">=0.5.11,<0.6.0"
torch = ">=2.0.0"
scikit-learn = ">=1.3.0"
scipy = ">=1.11.0"
gensim = ">=4.3.0"
pyyaml = ">=6.0"
loguru = ">=0.7.3,<0.8.0"
openpyxl = ">=3.1.5,<4.0.0"
dash = ">=4.0.0,<5.0.0"
dash-bootstrap-components = ">=2.0.4,<3.0.0"
wordcloud = ">=1.9.6,<2.0.0"
pillow = ">=12.1.1,<13.0.0"
pdfplumber = "^0.11.9"


[tool.ruff]
line-length = 100
select      = ["E", "F", "W", "I"]
ignore      = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short --cov=audit_snd30 --cov-report=term-missing"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
